--- a/public/routes/login.html
+++ b/public/routes/login.html
@@ -11,7 +11,7 @@
 <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
 <link rel="stylesheet" href="/css/styles.css">
 <!-- <script type="module" src="/js/index.js"></script> -->
-<script type="module" src="/js/login-script.js"></script>
+<!-- <script type="module" src="/js/login-script.js"></script> -->
 
 <link href="https://fonts.googleapis.com/css2?family=Bangers&family=Bungee+Shade&family=Inconsolata&family=Londrina+Shadow&family=Patua+One&family=Pangolin&display=swap" rel="stylesheet">
 <!-- <link href="https://fonts.googleapis.com/css2?family=Caveat+Brush&family=Delicious+Handrawn&family=Fredericka+the+Great&family=Mansalva&family=Pangolin&family=Short+Stack&display=swap" rel="stylesheet"> -->
@@ -20,8 +20,8 @@
 <body>
     
     <div class="login-menu-container display-container" id="login-menu-container">
-        <div class="nav-left nav-left-upper hide-from-view"> <button class="nav-button hide-from-view " id="login-menu-backward"><i class="forward-arrow fas fa-arrow-left fa-lg"></i></button>
-        </div>
+        <!-- <div class="nav-left nav-left-upper hide-from-view"> <button class="nav-button hide-from-view " id="login-menu-backward"><i class="forward-arrow fas fa-arrow-left fa-lg"></i></button>
+        </div> -->
      
           <div class="login-container">
             <h1 class="login-header">Login</h1>
@@ -54,11 +54,11 @@
           </div>
    
 
-      <div class="nav-buttons">
+      <!-- <div class="nav-buttons">
         <div class="nav-right"> <button class="nav-button"  onclick="window.location.href='/play'" id="login-menu-forward" >
 
           <i class=" forward-arrow fas fa-arrow-right fa-lg"></i></button></div>
-          </div>
+          </div> -->
         <!-- <div class="bottom"> -->
           <!-- <button class="nav-button"><i class=" back-arrow fas fa-arrow-left fa-lg"></i></button> -->
 
